--- a/src/pug/includes/mixins.pug
+++ b/src/pug/includes/mixins.pug
@@ -8,26 +8,26 @@ mixin tabItem(tabId)
 		ul.formloan__list
 			li
 				.formloan__sub-title Марка автомобиля
-				.selectcustom
+				.selectcustom.selectcustom_car
 					select
 						option Mersedes
 						option Audi
 						option Toyota
 			li
 				.formloan__sub-title Модель автомобиля
-				.selectcustom
+				.selectcustom.selectcustom_car
 					select
 						option A7
 						option A8
 			li
 				.formloan__sub-title Год выпуска
-				.selectcustom
+				.selectcustom.selectcustom_date
 					select
 						option 1990 г
 						option 2000 г
 			li
 				.formloan__sub-title Вид неисправности
-				.selectcustom
+				.selectcustom.selectcustom_key
 					select
 						option Изготовление ключа
 						option тест
